--- a/styles.css
+++ b/styles.css
@@ -1,125 +1,223 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&display=swap");
 
-*{
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    font-family: Poppins;
-    scroll-behavior: smooth;
-    transition: all 0.6s;
+* {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  font-family: Poppins;
+  scroll-behavior: smooth;
+  transition: all 0.6s;
 }
-
-
-button{
-    border: 1px transparent;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: 0.4s ease;
+.main {
+  background-color: #251f1f;
+  padding-bottom: 10px;
+  border-radius: 0px 0px 10px 10px;
 }
-
-button:hover{
-    font-weight: bolder;
-    transform: translateY(-2px);
-    color:dimgrey;
+.divbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
-.name{
-    align-self: center;
-    background-color: white;
-    border-color: white;
-    border-style: none;
-    
+.searchbar {
+  border-color: white;
 }
 
-.container{
-    padding-top: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: space-around;
-    flex-direction: column;
-    padding-left: 20px;
+.h1 {
+  color: white;
+}
+label {
+  color: white;
+}
+input {
+  color: white;
+  background-color: #251f1f;
+  border-color: white;
+  border-style: groove;
+  border-radius: 20px;
+}
+::placeholder {
+  display: block;
+  color: white;
+  text-align: center;
 }
 
-ul{
-    display: flex;
-    flex-wrap: wrap;
-}
-.text{
-    background-color: rgb(37, 31, 31);
-    padding: 20px;
-    border-radius: 20px;
-}
-.name{
-    background-color: rgb(37, 31, 31);
-    text-transform: uppercase;
-    font-weight: bold;
-    color: white;
-    font-size: 15px;
-}
-.img{
-    border-radius: 20px;
-    width: 100%;
-    height: 200px;
-}
-.img img{
-    max-width: 100%; 
-    max-height: 300px;
+button {
+  border: 1px transparent;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 0.4s ease;
 }
 
-.title{
-    font-weight: bolder;
-    color: white;
-    font-size: 30px;
+button:hover {
+  font-weight: bolder;
+  transform: translateY(-2px);
+  color: dimgrey;
 }
 
-
-nav.navigation{
-    display: none;
-    transition: all 0.4s;
+.name {
+  align-self: center;
+  background-color: white;
+  border-color: white;
+  border-style: none;
 }
 
-nav.navigation.active{
-    transition: all 0.4s;
-    padding-top: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: space-around;
-    flex-direction: column;
-    padding-left: 20px;
+.container {
+  padding-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: space-around;
+  flex-direction: column;
+  padding-left: 20px;
 }
 
-.bi-plus{
-    color: black;
-    font-size: 50px;
+ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+.text {
+  background-color: rgb(37, 31, 31);
+  padding: 20px;
+  border-radius: 20px;
+}
+.name {
+  background-color: rgb(37, 31, 31);
+  text-transform: uppercase;
+  font-weight: bold;
+  color: white;
+  font-size: 15px;
+}
+.img {
+  border-radius: 20px;
+  width: 100%;
+  height: 200px;
+}
+.img img {
+  max-width: 100%;
+  max-height: 300px;
+}
+
+.title {
+  font-weight: bolder;
+  color: white;
+  font-size: 30px;
+}
+
+nav.navigation {
+  display: none;
+  transition: all 0.4s;
+}
+
+nav.navigation.active {
+  transition: all 0.4s;
+  padding-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: space-around;
+  flex-direction: column;
+  padding-left: 20px;
+  align-content: space-around;
+}
+
+.bi-plus {
+  color: white;
+  font-size: 50px;
+  position: relative;
+}
+.bi-plus:hover {
+  color: grey;
+  transform: rotate(0.5turn);
+}
+
+.bi-trash3-fill:hover {
+  transition: all 0.4s;
+  color: red;
+}
+
+.bi-trash3-fill,
+.bi-pencil {
+  color: white;
+}
+
+p.title {
+  font-size: 1rem;
+}
+
+input.name {
+  font-size: 1rem;
+}
+
+div.editurl {
+  display: none;
+  transition: all 0.4s;
+}
+
+div.editurl.active {
+  transition: all 0.4s;
+  padding-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: space-around;
+  flex-direction: column;
+  padding-left: 20px;
+  align-content: space-around;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  font-weight: bolder;
+}
+a::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+a:hover::before {
+    transform: scaleX(1);
+  }
+
+  a {
     position: relative;
-    left: 90%;
-}
-.bi-plus:hover{
-    color: grey;
-}
-.bi-trash3-fill:hover{
-    transition: all 0.4s;
-    color: red;
-    
-}
-
-.bi-trash3-fill,.bi-pencil{
     color: white;
-}
+    text-decoration: none;
+  }
+  
+  a:hover {
+    color: white;
+  }
+  
+  a::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: white;
+    transform: scaleX(0);
+    transition: transform 0.3s ease;
+  }
+  
+  a:hover::before {
+    transform: scaleX(1);
+  }
 
-.DOM {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-content: space-around;
-}
-
-p.title{
-    font-size: 1rem;
-}
-
-input.name{
-    font-size: 1rem;
-}
+/* #github:hover{
+    transition: all 0.3s ease;
+    color: grey;
+    font-size: 18px;
+    text-decoration:overline;
+} */
