--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,10 @@ button:hover {
   border-style: none;
 }
 
+.name:hover {
+  color: grey;
+}
+
 .container {
   padding-top: 20px;
   display: flex;
@@ -112,16 +116,47 @@ nav.navigation {
 }
 
 nav.navigation.active {
+  animation: aparece 0.6s;
   transition: all 0.4s;
-  padding-top: 20px;
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
   justify-content: space-around;
   flex-direction: column;
-  padding-left: 20px;
   align-content: space-around;
 }
+
+nav.navigation.active a{
+animation: aparece1 0.4s;
+}
+
+@keyframes aparece {
+  0% {
+    opacity: 0;
+    height: 100%;
+  }
+  50%{
+    opacity: 0;
+    height: 10px;
+  }
+  100% {
+    opacity: 1;
+    height: 100%;
+  }
+}
+
+@keyframes aparece1 {
+    0%{
+        opacity: 0;
+        height: 100%;
+    }
+    100%{
+        opacity: 1;
+        height: 120px;
+    }
+    
+}
+
 
 .bi-plus {
   color: white;
@@ -185,39 +220,32 @@ a::before {
   transition: transform 0.3s ease;
 }
 a:hover::before {
-    transform: scaleX(1);
-  }
+  transform: scaleX(1);
+}
 
-  a {
-    position: relative;
-    color: white;
-    text-decoration: none;
-  }
-  
-  a:hover {
-    color: white;
-  }
-  
-  a::before {
-    content: "";
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: white;
-    transform: scaleX(0);
-    transition: transform 0.3s ease;
-  }
-  
-  a:hover::before {
-    transform: scaleX(1);
-  }
+a {
+  position: relative;
+  color: white;
+  text-decoration: none;
+}
 
-/* #github:hover{
-    transition: all 0.3s ease;
-    color: grey;
-    font-size: 18px;
-    text-decoration:overline;
-} */
+a:hover {
+  color: white;
+}
+
+a::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+a:hover::before {
+  transform: scaleX(1);
+}
